--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -14,11 +14,11 @@
         </header>
         <div class="container">
             <section class="filters">
-                <button type="button">Search</button>
+                <button type="button">SEARCH</button>
             </section>
         </div>
         <footer>
-            Best School
+            Best School is ALX Group
         </footer>
     </body>
 </html>
